# dotrc

./: .gitignore  .release-please-manifest.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commitlint.config.mjs  makefile  package-lock.json  package.json  pnpm-lock.yaml  release-please-config.json  renovate.json
.claude/: settings.json
.github/: BRANCH_PROTECTION.md  COMMIT_CONVENTION.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  lint.yml  release-please.yml  security.yml  validate-commits.yml  validate-pr-title.yml
.husky/: pre-commit  prepare-commit-msg
apps/dotrc-web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/dotrc-worker/: CHANGELOG.md  README.md  auth-checklist.md  auth-index.md  auth-security.md  cloudflare-access-setup.md  jwt-setup.md  local-development.md  package-lock.json  package.json  (+9 more)
crates/dotrc-core/: CHANGELOG.md  Cargo.toml  README.md
crates/dotrc-core/src/: commands.rs  errors.rs  lib.rs  normalize.rs  policy.rs  types.rs
crates/dotrc-core/tests/: integration_test.rs
crates/dotrc-server/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/dotrc-server/migrations/: 001_initial_schema.sql
crates/dotrc-server/src/: config.rs  error.rs  main.rs  routes.rs  storage.rs
docs/: README.md  contributing.md  core-architecture.md  data-model.md  design-decisions.md  glossary.md  integrations.md  openapi.yaml  overview.md  visibility-and-security.md  wasm-implementation.md
scripts/: batch-issues.sh  build-wasm.sh  init-repo.sh
(+61 files in other folders)
