[workspace]
resolver = "2"
members = [
  "crates/dotrc-core",
  "crates/dotrc-core-wasm",
  "crates/dotrc-server"
]

# Optimize WASM binary for size in release builds
[profile.release]
strip = true

# Per-package optimization: only opt-level can be set per-package
[profile.release.package.dotrc-core-wasm]
opt-level = "z"
