[package]
name = "dotrc-core"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-only"

[features]
default = ["std"]
std = ["serde/std", "thiserror"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", optional = true }
