[package]
name = "dotrc-server"
version = "0.2.0"
edition = "2021"

[dependencies]
dotrc-core = { path = "../dotrc-core" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sha2 = "0.10"

[dev-dependencies]
axum-test = "16"
